--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -9,10 +9,10 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"
             ></script>
+    <script src="../static/js/common.js"></script>
 
 </head>
-<body>
-<h1 class="display-1">Navbars</h1>
+<body onload="onLoaders()">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
     <a href="" class="navbar-brand">Internalisation POC</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#myNav2">
