--- a/src/main/resources/templates/Page2.html
+++ b/src/main/resources/templates/Page2.html
@@ -14,7 +14,7 @@
 </head>
 <body onload="onLoaders()">
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <a href="" class="navbar-brand">Internalisation POC</a>
+    <a href="" class="navbar-brand ml-3">Internalisation POC</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#myNav2">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,6 +30,16 @@
                 <a href="page2.html" th:href="@{/Page2}" class="nav-link active" th:text="#{SecondPage}">Page2</a>
             </li>
         </ul>
+        <form action="" class="form-inline mr-3">
+            <div class="form-group">
+                <label for="switch_language" onchange="reloadWithLanguage()">Language</label>
+                <select id="switch_language" class="form-control">
+                    <option value="en-US">English-US</option>
+                    <option value="fr">French</option>
+                    <option value="hi">Hindi</option>
+                </select>
+            </div>
+        </form>
     </div>
 </nav>
 <div class="jumbotron">
