--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -7,7 +7,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.js"
+            integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
     <script src="../../../static/js/ItemForm.js"
             th:src="@{/js/ItemForm.js}"></script>
     <!-- Font Awesome CDN -->
@@ -19,15 +20,16 @@
 <div id="fog-header" class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-2">Item Description</h1>
-        <p class="lead" style="background-color: #8d8686; color: white"><strong>Provide the full information about the Item.</strong></p>
-        <!-- <a href="" class="btn btn-success btn-lg">Search Existing Items</a> -->
+        <p class="lead" style="color: white"><strong>Provide the full information about the Item.</strong></p>
     </div>
 </div>
+<!--code for Tags START-->
 <div class="container">
+<!--    <div th:if="${message}">-->
+    <div>
+        <h4 class="text-danger" id="InfoMessage" th:text="${message}"></h4>
+    </div>
     <div class="input-group my-3">
-        <div th:if="${message}">
-            <h2 th:text="${message}"/>
-        </div>
         <div class="input-group-prepend">
             <span class="input-group-text">Item Tags</span>
         </div>
@@ -40,29 +42,32 @@
     </div>
     <div id="taglabels" class="form-inline">
     </div>
+    <!--code for Tags END-->
 
-    <div class="container">
-        <div id="imageContainer" class="row my-3" style="background-color: #e9ecef;">
-        </div>
-        <form th:object="${images}" th:action="@{/images}" enctype="multipart/form-data" method="post">
-            <div class="row">
-                <div class="col-md-11">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="customFile" multiple>
-                        <label class="custom-file-label" for="customFile">Choose file</label>
-                    </div>
-                </div>
-                <div class="col-md-1">
-                    <input type="button" class="btn btn-success" value="Upload">
-                </div>
-            </div>
-        </form>
+    <!--    Code for Documents START-->
+    <div id="imageContainer" class="row my-3" style="background-color: #e9ecef;">
     </div>
+    <div class="progress my-2">
+        <div id="imageUploadProgress" class="progress-bar-striped progress-bar-animated bg-success"
+             role="progressbar" style="width: 25%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-11">
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" name="filesU" id="customFile" multiple>
+                <label class="custom-file-label" for="customFile">Choose file</label>
+            </div>
+        </div>
+        <div class="col-md-1">
+            <input id="uploadButton" type="button" class="btn btn-success" value="Upload">
+        </div>
+    </div>
+    <!--    Code for Documents END-->
     <br/>
+<!--    Main Form START-->
     <form th:object="${item}" th:action="@{/item/}" method="post">
-
         <input type="hidden" id="finalTags" name="finalTags" th:field="*{tag}">
-        <input type="hidden" id="userId" name="finalTags" value='user1' th:field="*{userId}">
+        <input type="hidden" id="userId" name="userId" value='user1' th:field="*{userId}">
         <div class="form-group mt=3">
             <div class="form-row">
                 <div class="col-md-6">
@@ -85,10 +90,11 @@
             </div>
         </div>
         <div class="d-flex justify-content-center">
-            <input type="submit" value="Submit" class="btn btn-md-8 btn-primary w-50 mb-5">
+            <input id="submit" type="submit" value="Save Item" class="btn btn-md-8 btn-primary w-50 mb-5">
         </div>
     </form>
-</div>
+<!--    main form END-->
+    </div>
 <style>
         #fog-header {
             background: url("https://images.unsplash.com/photo-1514418197935-e0cac2bb695a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=73703fc107d2c3f2835ec8af1f981c25&auto=format&fit=crop&w=1950&q=80");
@@ -104,6 +110,8 @@
         crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
         crossorigin="anonymous"></script>
 </body>
 </html>
